--- a/sections/meet-team.liquid
+++ b/sections/meet-team.liquid
@@ -4,24 +4,27 @@
     <div class="row">
       {% for block in section.blocks %}
         <div class="col-lg-4 col-md-6 mb-4">
-          <div class="team-member-card">
-            <div class="card-inner">
-              <div class="card-front h-100">
+          <div class="flip-card">
+            <div class="flip-card-inner">
+
+              <!-- Front -->
+              <div class="flip-card-front text-center">
                 {% if block.settings.image != blank %}
-                  <img src="{{ block.settings.image | img_url: '400x400' }}" class="card-img-top" alt="{{ block.settings.name }}">
+                  <img src="{{ block.settings.image | img_url: '400x250' }}" alt="{{ block.settings.name }}">
                 {% else %}
-                  <div class="placeholder-image">{{ 'image' | placeholder_svg_tag: 'placeholder-svg' }}</div>
+                  <img src="https://via.placeholder.com/400x250" alt="Placeholder Image">
                 {% endif %}
-                <div class="card-body text-center">
-                  <h3 class="card-title h5">{{ block.settings.name }}</h3>
-                  <p class="card-text">{{ block.settings.designation }}</p>
-                </div>
+                <h5 class="mt-3 mb-0">{{ block.settings.name }}</h5>
+                <p class="text-muted">{{ block.settings.designation }}</p>
               </div>
-              <div class="card-back h-100">
-                <div class="card-body d-flex flex-column justify-content-center align-items-center text-center">
-                  <p class="card-text">{{ block.settings.info }}</p>
-                </div>
+
+              <!-- Back -->
+              <div class="flip-card-back d-flex align-items-center">
+                <p>
+                  {{ block.settings.info }}
+                </p>
               </div>
+
             </div>
           </div>
         </div>
